--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,4 +38,5 @@ http {
 
   include                       /etc/nginx/servers/*.conf;
 
+  limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
 }
