--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,11 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Update openssl
+          command: |
+            sudo apt-get update
+            sudo apt-get install openssl -y 
+      - run:
           name: Init Docker swarm
           command: |
             docker swarm init
